--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -56,7 +56,6 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password_register"
                     android:imeActionId="@+id/register"
-                    android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
@@ -89,6 +88,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_lastname"
                     android:inputType="text"
+                    android:imeActionLabel="@string/action_register"
                     android:maxLines="1"
                     android:singleLine="true" />
 
