FAT COMMIT WITH AMAZING FEATURES

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.pinnackl.shoppinglist.RegisterActivity">
+    tools:context="com.pinnackl.shoppinglist.activities.RegisterActivity">
 
     <!-- register progress -->
     <ProgressBar
@@ -106,6 +106,15 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <TextView
+        android:text="@string/action_account"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="15dp"
+        android:layout_marginTop="10dp"
+        android:id="@+id/login" />
 
 </LinearLayout>
 
