--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.pinnackl.shoppinglist.LoginActivity">
+    tools:context="com.pinnackl.shoppinglist.activities.LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
@@ -76,8 +76,11 @@
     </ScrollView>
 
     <TextView
-        android:text="Register"
+        android:text="@string/action_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="15dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/register" />
 </LinearLayout>
