--- a/app/src/main/res/layout/activity_add_list.xml
+++ b/app/src/main/res/layout/activity_add_list.xml
@@ -16,12 +16,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="@string/prompt_shopping_list_name"
         android:ems="10"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
-        android:id="@+id/editText" />
+        android:id="@+id/listName" />
 
     <Button
         android:text="@string/action_create_list"
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:id="@+id/button"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/listName"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
