--- a/app/src/main/res/layout/activity_add_list.xml
+++ b/app/src/main/res/layout/activity_add_list.xml
@@ -15,9 +15,9 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:hint="@string/prompt_shopping_list_name"
-        android:ems="10"
+        android:maxLines="1"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
