--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -17,11 +17,11 @@
         android:textStyle="bold"
         android:textSize="22dp"
         android:textColor="#000000"
-        android:layout_weight="0.4"
+        android:layout_weight="0.7"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp" />
 
-    <TextView android:id="@+id/txtDate"
+   <!-- <TextView android:id="@+id/txtDate"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
@@ -32,7 +32,7 @@
         android:textColor="#000000"
         android:layout_weight="0.7"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp" />
+        android:layout_marginBottom="5dp" />-->
 
     <ImageView
         android:layout_width="wrap_content"
@@ -41,7 +41,7 @@
         android:layout_alignParentBottom="true"
         app:srcCompat="@android:drawable/ic_delete"
         android:id="@+id/imageButton"
-        android:layout_weight="0"
+        android:layout_weight="0.3"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:background="@android:color/transparent"
