--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -17,7 +17,7 @@
         android:textStyle="bold"
         android:textSize="22dp"
         android:textColor="#000000"
-        android:layout_weight="0.7"
+        android:layout_weight="1"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp" />
 
@@ -39,9 +39,24 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
+        app:srcCompat="@drawable/ic_edit"
+        android:id="@+id/editButton"
+        android:layout_weight="0"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@android:color/transparent"
+        android:visibility="visible"
+        android:clickable="true"
+        android:cropToPadding="false" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         app:srcCompat="@android:drawable/ic_delete"
         android:id="@+id/imageButton"
-        android:layout_weight="0.3"
+        android:layout_weight="0"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:background="@android:color/transparent"
