--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -36,6 +36,7 @@
             android:textStyle="bold"
             android:textSize="22dp"
             android:textColor="#000000"
+            android:drawableRight="@android:drawable/ic_delete"
             android:layout_weight="1" />
     </ViewSwitcher>
 
