--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -8,27 +8,27 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.pinnackl.shoppinglist.activities.AddListActivity">
+    tools:context="com.pinnackl.shoppinglist.activities.AddItemActivity">
 
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:hint="@string/prompt_shopping_list_name"
+        android:hint="@string/prompt_item_name"
         android:maxLines="1"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
-        android:id="@+id/listName" />
+        android:id="@+id/itemName" />
 
     <Button
-        android:text="@string/action_create_list"
+        android:text="@string/action_create_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:id="@+id/button"
-        android:layout_below="@+id/listName"
+        android:layout_below="@+id/itemName"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
