--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -16,9 +16,25 @@
         android:textStyle="bold"
         android:textSize="22dp"
         android:textColor="#000000"
-        android:layout_weight="1"
+        android:layout_weight="0.15"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp" />
+
+    <TextView android:id="@+id/quantity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:textStyle="bold"
+        android:textSize="22dp"
+        android:textColor="@android:color/background_light"
+        android:layout_weight="0.85"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@color/colorPrimary"
+        android:elevation="1dp"
+        android:textAlignment="center" />
 
 
     <ImageView
