add text if list or items empty

--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -44,10 +44,10 @@
                 android:id="@+id/fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
                 android:layout_margin="@dimen/fab_margin"
                 app:srcCompat="@drawable/add_content"
-                app:rippleColor="@android:color/white" />
+                app:rippleColor="@android:color/white"
+                android:layout_gravity="bottom|end" />
 
         </android.support.design.widget.CoordinatorLayout>
 
