--- a/app/src/main/res/layout/content_product.xml
+++ b/app/src/main/res/layout/content_product.xml
@@ -20,4 +20,11 @@
         android:headerDividersEnabled="false"
         android:layout_marginTop="50dp" />
 
+    <TextView android:id="@+id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_marginTop="50dp"
+        android:text="@string/list_empty"/>
+
 </RelativeLayout>
