--- a/app/src/main/res/layout/content_product.xml
+++ b/app/src/main/res/layout/content_product.xml
@@ -16,7 +16,7 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:headerDividersEnabled="false"
         android:layout_marginTop="50dp" />
 
