--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -17,8 +17,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
             android:textStyle="bold"
             android:textSize="22dp"
             android:textColor="#000000"
@@ -29,21 +27,17 @@
         <EditText android:id="@+id/editTitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
+            android:inputType="text"
             android:textStyle="bold"
             android:textSize="22dp"
             android:textColor="#000000"
-            android:drawableRight="@drawable/ic_validate_input"
-            android:layout_weight="1" />
+            android:maxLines="1"
+            android:drawableRight="@drawable/ic_validate_input" />
     </ViewSwitcher>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
         app:srcCompat="@drawable/ic_edit"
         android:id="@+id/editButton"
         android:layout_weight="0"
@@ -57,8 +51,6 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
         app:srcCompat="@android:drawable/ic_delete"
         android:id="@+id/imageButton"
         android:layout_weight="0"
